# Linear_Regression_visualization_debug

./: main.py
GLRender3d/: CMakeLists.txt  CompileDefinitions.h  main copy.cpp  main.cpp  main_2.cpp
ParticleSkinner3DTaichi/: ParticleSkinner3DTaichi.py
ParticleSkinner3DTaichi/cpp_marching_cubes/: CompileDefinitions.h
config/: build.sh  config.py  setting.xml
model/: best_model.joblib
results/run_20250717_170458/: sample_1_result.json
results/run_20250717_171436/: sample_1_result.json
results/run_20250721_131223/: simulation_results.csv
scripts/: Creat_dat.py  MPM_Emulator.py
simulation/: file_ops.py  taichi.py
src/: Creat_dat.py  build.sh
src/GLRender3d/: CompileDefinitions.h  main.cpp
src/ParticleSkinner3DTaichi/: ParticleSkinner3DTaichi.py
src/ParticleSkinner3DTaichi/cpp_marching_cubes/: CompileDefinitions.h  LookUpTable.h  MarchingCubes.cpp  MarchingCubes.h
